[package]
name = "savesys"
version = "3.5.6"
license = "MIT"
description = "Variable-based save management system"
keywords = ["gamedev", "save-management", "save-system"]
categories = ["game-development", "filesystem"]
edition = "2021"

exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
